XCOMMONS-3562: Snapshot repositories declared in Maven poms should not be used to search for release artifacts